add_library(common STATIC
        abend.c
        addrsize.c
        alignment.c
        assertion.c
        bitops.c
        chartype.c
        check.c
        cmdline.c
        coll.c
        cpu.c
        debugflag.c
        exprdefs.c
        fileid.c
        filepos.c
        filestat.c
        filetime.c
        filetype.c
        fname.c
        fp.c
        gentype.c
        hashfunc.c
        hashtab.c
        intptrstack.c
        intstack.c
        matchpat.c
        mmodel.c
        print.c
        searchpath.c
        segnames.c
        shift.c
        strbuf.c
        strpool.c
        strstack.c
        strutil.c
        target.c
        tgttrans.c
        version.c
        xmalloc.c
        xsprintf.c)
